--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SliderTest</string>
+    <string name="Button">Connect</string>
     <string-array name="SliderTest">
         <item>20</item>
         <item>20</item>
